# ikona

./: .gitattributes  .gitignore  ICON_NAMES.md  PROGRESS.json  README.md  build-installer.ps1  claude.md  editor.c  editor.h  err.bak  gui_utils.c  gui_utils.h  icon_manager.c  icon_manager.h  ikona.c  ikona.h  ikona.rc  importer.c  importer.h  make-portable.ps1  meson.build  modifiche.json  prepare_dist.ps1  print_log.c  print_log.h  printer.c  printer.h  style.bak2  style.css  utils.c  utils.h  viewer.c  viewer.h  zoom.bak
.claude/: settings.local.json
installer/: build-installer.ps1  ikona.iss  prepare_dist.ps1
